--- a/index.html
+++ b/index.html
@@ -1,5 +1,23 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="branchinglanternstyles.css">
+      </head>
     <body>
-        <h1>Hello World!</h1>
+        <div id='header'>
+            <h1>Not Clue</h1>
+        </div>
+
+        <div id='content'>
+            <h2>Presented by BranchingLantern</h2>
+        </div>
+
+        <form id = 'connectForm'>
+            <label for = 'iRoomCode'>Room Code:</label><br>
+            <input type = 'text' id = 'iRoomCode' name = 'iRoomCode'><br>
+            <label for = 'iName'>Room Code:</label><br>
+            <input type = 'text' id = 'iName' name = 'iName'><br>
+            <input type="submit" value="Connect">
+        </form>
+        
     </body>
 </html>
